--- a/frontend/src/pages/registry/MapContextEditor/MapContextLayerTree/MapContextLayerTree.css
+++ b/frontend/src/pages/registry/MapContextEditor/MapContextLayerTree/MapContextLayerTree.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  width: 100%;
 }
 
 .mapcontext-layertree-node-title,
